--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,1 +1,2 @@
-@import "custom";
+@import "chirpy";  // imports all Chirpy default styles
+@import "custom";  // your custom styles override defaults
